<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="help_url_wifi" translatable="false">http://support.google.com/wifi</string>
    <string name="help_url_accounts" translatable="false">http://support.google.com/accounts</string>
    <string name="bluetooth_rename_device" product="tablet">Rename PDi-TAB\u00AE2</string>
    <string name="bluetooth_ask_discovery" product="tablet">An app wants to make your PDi-TAB\u00AE2 visible to other Bluetooth devices for <xliff:g id="timeout">%1$d</xliff:g> seconds.</string>
    <string name="bluetooth_ask_lasting_discovery" product="tablet">An app wants to make your PDi-TAB\u00AE2 visible to other Bluetooth devices. You can change this later in Bluetooth settings.</string>
    <string name="bluetooth_ask_enablement_and_discovery" product="tablet">An app wants to turn on Bluetooth and make your PDi-TAB\u00AE2 visible to other devices for <xliff:g id="timeout">%1$d</xliff:g> seconds.</string>
    <string name="bluetooth_ask_enablement_and_lasting_discovery" product="tablet">An app wants to turn on Bluetooth and make your PDi-TAB\u00AE2 visible to other devices. You can change this later in Bluetooth settings.</string>
    <string name="phone_info_label" product="tablet">PDi-TAB\u00AE2 info</string>
    <string name="crypt_keeper_encrypt_title" product="tablet">Encrypt PDi-TAB\u00AE2</string>
    <string name="crypt_keeper_desc" product="tablet">
    You can encrypt your accounts, settings, downloaded apps and their data,
    media, and other files. Once you encrypt your PDi-TAB\u00AE2, you need to type a numeric PIN
    or password to decrypt it each time you power it on. You can\'t decrypt your PDi-TAB\u00AE2
    except by performing a factory data reset, erasing all your data.\n\nEncryption takes
    an hour or more. You must start with a charged battery and keep your PDi-TAB\u00AE2 plugged in
    until encryption is complete. If you interrupt the encryption process, you will lose
    some or all of your data.</string>
    <string name="crypt_keeper_button_text" product="tablet">Encrypt PDi-TAB\u00AE2</string>
    <string name="crypt_keeper_final_desc" product="tablet">
    The encryption operation is irreversible and if you interrupt it, you\'ll lose data.
    Encryption takes an hour or more, during which the PDi-TAB\u00AE2 will restart several times.
    </string>
    <string name="crypt_keeper_failed_summary" product="tablet">
      Encryption was interrupted and can\'t complete. As a result, the data on
      your tablet is no longer accessible.
      \n\n
      To resume using your PDi-TAB\u00AE2, you need to perform a factory reset.
      When you set up your PDi-TAB\u00AE2 after the reset, you\'ll have an opportunity
      to restore any data that was backed up to your Google Account.
    </string>
    <string name="bluetooth_disconnect_pan_nap_profile" product="tablet"><xliff:g id="device_name">%1$s</xliff:g> will be disconnected from sharing this PDi-TAB\u00AE2\'s Internet connection.</string>
    <string name="nfc_quick_toggle_summary" product="tablet">Allow data exchange when the PDi-TAB\u00AE2 touches another device</string>
    <string name="wifi_required_info_text">To complete setup, your PDi-TAB\u00AE2 needs access to Wi\u2011Fi. After setup, you can switch between ethernet data and Wi\u2011Fi.</string>
    <string name="wifi_skipped_message" product="tablet">WARNING: You may incur extra carrier data charges.\n\nPDi-TAB\u00AE2 setup can require significant network activity.</string>
    <string name="wifi_and_mobile_skipped_message" product="tablet">WARNING: Until you have an internet connection, the PDi-TAB\u00AE2 won\'t be able to verify that your software is up to date.</string>
    <string name="wifi_connect_failed_message" product="tablet">The PDi-TAB\u00AE2 was unable to connect to this Wi\u2011Fi network.</string>
    <string name="dock_audio_summary_none" product="tablet">PDi-TAB\u00AE2 not docked</string>
    <string name="dock_not_found_text" product="tablet">You need to dock the PDi-TAB\u00AE2 before setting up dock audio.</string>
    <string name="dock_sounds_enable_summary_on" product="tablet">Play sound when inserting or removing PDi-TAB\u00AE2 from dock</string>
    <string name="dock_sounds_enable_summary_off" product="tablet">Don\'t play sound when inserting or removing PDi-TAB\u00AE2 from dock</string>
    <string name="accelerometer_summary_on" product="tablet">Switch orientation automatically when rotating PDi-TAB\u00AE2</string>
    <string name="accelerometer_summary_off" product="tablet">Switch orientation automatically when rotating PDi-TAB\u00AE2</string>
    <string name="sim_lock_on" product="tablet">Require PIN to use PDi-TAB\u00AE2</string>
    <string name="sim_lock_off" product="tablet">Require PIN to use PDi-TAB\u00AE2</string>
    <string name="device_info_settings" product="tablet">PDi-TAB\u00AE2 status</string>
    <string name="device_status_summary" product="tablet">Status of the network, uptime, and other information</string>
    <string name="master_clear_summary" product="tablet">Erases all data on PDi-TAB\u00AE2</string>
    <string name="master_clear_desc" product="tablet">"This will erase all data from your PDi-TAB\u00AE2\'s <b>internal storage</b>, including:\n\n<li>Your system level accounts</li>\n<li>System and app data and settings</li>\n<li>Downloaded apps</li>"</string>
    <string name="master_clear_button_text" product="tablet">Reset PDi-TAB\u00AE2</string>
    <string name="bluetooth_tethering_available_subtext" product="tablet">Sharing this PDi-TAB\u00AE2\'s Internet connection</string>
    <string name="bluetooth_tethering_device_connected_subtext" product="tablet">Sharing this PDi-TAB\u00AE2\'s Internet connection to 1 device</string>
    <string name="bluetooth_tethering_devices_connected_subtext" product="tablet">Sharing this PDi-TAB\u00AE2\'s Internet connection to <xliff:g id="connectedDeviceCount">%1$d</xliff:g> devices</string>
    <string name="bluetooth_tethering_off_subtext" product="tablet">Not sharing this PDi-TAB\u00AE2\'s Internet connection</string>
    <string name="location_street_level" product="tablet">Let apps use GPS on your PDi-TAB\u00AE2 to pinpoint your location</string>
    <string name="about_settings" product="tablet">About PDi-TAB\u00AE2</string>
    <string name="install_all_warning" product="tablet">Your PDi-TAB\u00AE2 and personal data are more vulnerable to attack by apps
 from unknown sources. You agree that you are solely responsible for any
 damage to your PDi-TAB\u00AE2 or loss of data that may result from using
 these apps.</string>
    <string name="security_settings_desc" product="tablet">This app can access the following on your PDi-TAB\u00AE2:</string>
    <string name="security_settings_desc_multi" product="tablet">This app can access the following on your PDi-TAB\u00AE2.
         In order to improve performance and reduce memory usage, some of these permissions
         are available to <xliff:g id="base_app_name">%1$s</xliff:g> </string>
    <string name="move_app_to_internal" product="tablet">Move to PDi-TAB\u00AE2</string>
    <string name="runningservicedetails_stop_dlg_text" product="tablet">If you stop this service, some
        features of your PDi-TAB\u00AE2 may stop working correctly until you power it off
        and then on again.</string>
    <string name="testing_phone_info" product="tablet">PDi-TAB\u00AE2 information</string>
    <string name="power_idle" product="tablet">PDi-TAB\u00AE2 idle</string>
    <string name="usage_type_phone" product="tablet">PDi-TAB\u00AE2</string>
    <string name="battery_desc_standby" product="tablet">Battery used when PDi-TAB\u00AE2 is idle</string>
    <string name="really_remove_account_message" product="tablet">Removing this account will delete all of its messages, contacts, and other data from the PDi-TAB\u00AE2!</string>
    <string name="remove_account_failed" product="tablet">This account is required by some apps. You can only remove it by resetting the PDi-TAB\u00AE2 to factory defaults (which deletes all your personal data) in Settings &gt; Backup &amp; reset.</string>
    <string name="data_usage_auto_sync_on_dialog" product="tablet">Any changes you make to your accounts on the web will be automatically copied to your PDi-TAB\u00AE2.\n\nSome accounts may also automatically copy any changes you make on the PDi-TAB\u00AE2 to the web. A Google Account works this way.\n\nTo choose which kinds of information to sync within each account, go to Settings &gt; Accounts.</string>
    <string name="data_usage_limit_dialog_mobile" product="tablet">Your mobile data connection will be disabled when the specified limit is reached.\n\nSince data usage is measured by your PDi-TAB\u00AE2, and your carrier may account for usage differently, consider using a conservative limit.</string>
    <string name="data_usage_restrict_background_multiuser" product="tablet">If you restrict background mobile data, some apps and services won\'t work unless you\'re connected to an ethernet or Wi\u2011Fi network.\n\nThis setting affects all users on this PDi-TAB\u00AE2.</string>
    <string name="data_usage_total_during_range_mobile" product="tablet"><xliff:g id="range" example="Jul 1 - Jul 31">%2$s</xliff:g>: about <xliff:g id="total" example="128KB">%1$s</xliff:g> used, as measured by your PDi-TAB\u00AE2. Your carrier\'s data usage accounting may differ.</string>
    <string name="user_add_user_message_long">You can share this device with other people by creating additional users. Each user has their own space, which they can customize with their own apps, wallpaper, and so on. Users can also adjust PDi-TAB\u00AE2 settings like Wi\u2011Fi that affect everyone.\n\nAfter you create a new user, that person needs to go through a setup process.\n\nAny user can accept updated app permissions on behalf of all other users.</string>
    <string name="user_setup_dialog_message">Make sure the person is available to take the PDi-TAB\u00AE2 and set up their space</string>
    <string name="user_cannot_manage_message" product="tablet">Only the PDi-TAB\u00AE2\'s owner can manage users.</string>
    <string name="user_confirm_remove_self_message" product="tablet">You will lose your space and data on this PDi-TAB\u00AE2. You can\'t undo this action.</string>
    <string name="user_confirm_remove_message" product="tablet">This user\'s space and data will disappear from this PDi-TAB\u00AE2. You can\'t undo this action.</string>
    <string name="user_profile_confirm_remove_message" product="tablet">This profile\'s space and data will disappear from this PDi-TAB\u00AE2. You can\'t undo this action.</string>
    <string name="ota_server_name"> Server </string>
    <string name="ota_port_name"> Port </string>
    <string name="ota_server_summary"> Tap to use a non PDi\u00AE OTA server </string>
    <string name="ota_port_summary"> Tap to use a different port </string>
    <string name="ota_protocol_name"> Protocol </string>
    <string name="ota_protocol_summary"> Tap to change the type of server being accessed </string>
    <string name="ota_config_name"> Configuration Suffix </string>
    <string name="ota_config_summary"> Tap to use a custom update configuration </string>
    <string name="ota_archive_name"> Archive Suffix </string>
    <string name="ota_archive_summary"> Tap to use a custom update package </string>
    <string name="ota_monthly_check_name"> Automate Updates </string>
    <string name="ota_monthly_check_sum_off">Tap box to have system start monthly checks for updates </string>
    <string name="ota_monthly_check_sum_on">Tap box to have system stop monthly checks </string>
    <string name="ota_url_mod_title"> URL Configuration </string>
    <string name="ota_automation_title"> Automation Configuration</string>
    <string name="ota_actions_title"> Actions </string>
</resources>